@startuml ClassDiagram

class Education {
    EducationID : Int
    Title : String
    University : University
}

class Schedule{
    ScheduleID : Int
    StartDate : datetime
    EndDate : datetime
    ScheduleStatus : ScheduleStatus
    AdminID : String
    EducationID : Int
    CSID : String
    CourseList : Course[]
}

class Location{
    Address : Address
    RoomID : Int
    LocationType : LocationType
    Capacity : Int
}

class Course{
    CourseID : CourseID
    ECTS : Float
    TeacherID : String
    Teacher : Teacher
    Faculty : Faculty
    ScheduleID : Int
    TimeFrames : TimeFrame[]
}


class User{
    FirstName : String
    LastName : String
    Mail : String
    PhoneNumber : Int
    UserID: UserID
}

' class Semester{
'     Courses : Course[]
'     StartDate : Datetime
' }

class Student{
    StudentID : String
    Enrollment : Int
    ViewSchedule()
}

class Teacher{
    TeacherID : String
    ' SaveProposedSchedule()
    ' SendProposedSchedule()
    ' CreateSchedule()
    ProposeSchedule()
    ' ViewSchedule()
    ' EditSchedule()
}

class Admin{
    AdminID : String
    CreateSchedule()
    ViewSchedule()
    EditSchedule()
}

class TimeFrame{
    TimeFrameID : Int
    StartTime : datetime
    EndTime : datetime
    Weekday : Day
    Location : Location
    ClassType : ClassType
    RoomID : String
    fillTimeFrame()
    setLocation()
    updateID()
}

class CourseSecretary{
    CSID : String
    CreateSchedule()
    ViewSchedule()
    EditSchedule()
}

' User"1" o-- "1" Schedule : has a
Course"1..*" --o "1" Schedule : has a
' Student"1" o-- "1" Schedule : has a
' Teacher"1" o-- "1" Schedule : has a

' Education"1" *-- "4..6" Semester : contains

TimeFrame "1" o-- "0..*"Location : has a

User"1" <|-- "1"Student : inherits
User"1" <|-- "1"Teacher : inherits
User"1" <|-- "1"Admin : inherits
User"1" <|-- "1"CourseSecretary : inherits

' Semester"1" *-- "1..*" Course : contains
' Course"1" *-- "0..*" Class : contains
Course"1" o-- "0..*" TimeFrame : has a
Teacher"1" --o "0..*" Course : has a
Student"0..*" o-- "1" Education : has a
Schedule"1" o-- "1"Education : has a
Schedule"0..*" <-- "1"Admin
Schedule"0..*" <-- "1"CourseSecretary

' Login "1" -- "1" User : login

@enduml

